k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-svc
spec:
  selector:
    app: devsecops-app
  ports:
  - name: http
    port: 80
    targetPort: 3000
  type: ClusterIP
